--- a/src/app/Feature/Routings/home/home.component.html
+++ b/src/app/Feature/Routings/home/home.component.html
@@ -1,1 +1,5 @@
-<img src="assets/PP_MainImage.png">
+<main class="routerArea">
+  <h3>A Site about the history of</h3>
+  <h1>The Pink Panther</h1>
+  <img src="assets/PP_MainImage.png">
+</main>
