--- a/src/app/Feature/_nav-bar/nav-bar.component.css
+++ b/src/app/Feature/_nav-bar/nav-bar.component.css
@@ -1,52 +1,29 @@
-.wrapper {
-  margin: 50px auto;
-  width: 500px;
-}
-
-h1 {
-  color: #264D73;
-  font-size: 2.5rem;
-}
-
 a {
   cursor: pointer;
 }
 
-button {
-  background-color: #eee;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  color: black;
-  font-size: 1.2rem;
-  padding: 1rem;
-  margin-right: 1rem;
-  margin-bottom: 1rem;
-  margin-top: 1rem;
+#navBar-Main {
+  background-color: #FA8AB0;
+  border: 3px solid #B61588;
+  display: flex;
+  justify-content: space-between;
 }
 
-button:hover {
-  background-color: black;
-  color: white;
+#navBar-Left {
+  font-family: 'cooper black';
+  font-size: 2em;
 }
 
-/* Navigation link styles */
-nav a {
-  padding: 5px 10px;
+#navBar-Right a {
   text-decoration: none;
-  margin-right: 10px;
-  margin-top: 10px;
-  display: inline-block;
-  background-color: #e8e8e8;
-  color: #3d3d3d;
-  border-radius: 4px;
+  color: white;
+  padding: 0.5em;
 }
 
-nav a:hover {
-  color: white;
-  background-color:  #42545C;
+#navBar-Right a:hover {
+  color: #D372B7;
+
 }
-nav a.active {
-  background-color: black;
-  color: white;
+#navBar-Right a.active {
+  color: #B61588;
 }
