--- a/src/app/Feature/Routings/home/home.component.html
+++ b/src/app/Feature/Routings/home/home.component.html
@@ -1,5 +1,19 @@
 <main class="routerArea">
-  <h3>A Site about the history of</h3>
+  <h3>Site about the history of</h3>
   <h1>The Pink Panther</h1>
-  <img src="assets/PP_MainImage.png">
+  <img src="assets/PP_MainImage.png" />
+  <a href="https://www.facebook.com/officialpinkpanther/" target="_blank"
+    ><fa-icon [icon]="faFacebookF" class="brandIcon"></fa-icon
+  ></a>
+  <a href="https://twitter.com/thepinkpanther?lang=en" target="_blank"
+    ><fa-icon [icon]="faTwitter" class="brandIcon"></fa-icon
+  ></a>
+  <a
+    href="https://www.youtube.com/channel/UCFeUyPY6W8qX8w2o6oSiRmw"
+    target="_blank"
+    ><fa-icon [icon]="faYoutube" class="brandIcon"></fa-icon
+  ></a>
+  <a href="https://en.wikipedia.org/wiki/The_Pink_Panther" target="_blank"
+    ><fa-icon [icon]="faWikipediaW" class="brandIcon"></fa-icon
+  ></a>
 </main>
