--- a/src/app/Feature/Routings/home/home.component.css
+++ b/src/app/Feature/Routings/home/home.component.css
@@ -1,4 +1,34 @@
 .routerArea {
-  display: flex;
-  align-items: center;
+  text-align: center;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+h1 {
+  font-size: 5em;
+  font-family: "cooper black";
+  color: #fa8ab0;
+  -webkit-text-stroke: 2.5px #b61588;
+  padding: 10px;
+}
+
+h3 {
+  font-size: 3.5em;
+  font-weight: bold;
+  padding: 10px;
+}
+
+.brandIcon {
+  color: #b61588;
+
+  font-size: 4em;
+  padding: 0.5em;
+}
+
+.brandIcon:hover {
+  color: #d372b7;
 }
