--- a/src/app/Feature/_nav-bar/nav-bar.component.html
+++ b/src/app/Feature/_nav-bar/nav-bar.component.html
@@ -13,7 +13,9 @@
       >History</a
     >
     <a routerLink="/about" routerLinkActive="active" title="About">About</a>
-    <a href="#" title="User"><fa-icon [icon]="faPaw" id="pawIcon"></fa-icon></a>
+    <a href="#" title="User" id
+      ><fa-icon [icon]="faPaw" id="pawIcon"></fa-icon
+    ></a>
   </nav>
 </mat-toolbar>
 <div>
