--- a/src/app/Feature/Routings/home/home.component.css
+++ b/src/app/Feature/Routings/home/home.component.css
@@ -6,6 +6,7 @@
   left: 50%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+  display: block;
 }
 
 h1 {
@@ -31,4 +32,20 @@ h3 {
 
 .brandIcon:hover {
   color: #d372b7;
+}
+
+#audioIcon {
+  margin-top: 1em;
+  margin-right: 1em;
+  text-align: right;
+}
+
+#audioIcon fa-icon {
+  font-size: 3em;
+  color: lightgray;
+}
+
+#audioIcon fa-icon:hover {
+  color: #d372b7;
+  cursor: pointer;
 }
