--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+:host {
+  background-color: white;
+}
 
 html,
 body {
@@ -6,4 +9,17 @@ body {
   display: block;
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.mat-form-field-required-marker {
+  color: red;
 }
