--- a/src/app/Feature/_nav-bar/nav-bar.component.html
+++ b/src/app/Feature/_nav-bar/nav-bar.component.html
@@ -13,6 +13,9 @@
       >History</a
     >
     <a routerLink="/about" routerLinkActive="active" title="About">About</a>
+    <a routerLink="/appendix" routerLinkActive="active" title="Appendix"
+      >Appendix</a
+    >
     <i (click)="openUserModal()" title="User" class="userIcon">
       <fa-icon [icon]="faPaw" id="pawIcon"></fa-icon>
     </i>
