--- a/src/app/Feature/Routings/gallery/gallery1/gallery1.component.html
+++ b/src/app/Feature/Routings/gallery/gallery1/gallery1.component.html
@@ -1,15 +1,5 @@
 <main class="routerArea">
   <h2>{{ title }}</h2>
-  <a href="https://www.npmjs.com/package/angular-responsive-carousel"
-    >NPM Link</a
-  >
-  <br />
-  <a
-    href="http://ivylab.space/carousel#usage"
-    style="display: inline-block; margin-bottom: 0.5em"
-    >WebSite Link</a
-  >
-
   <carousel
     [images]="dataSet2"
     [height]="valueH"
@@ -20,6 +10,7 @@
     objectFit="contain"
     [counter]="cot"
     [borderRadius]="br"
+    [autoplay]="ap"
   >
   </carousel>
 </main>
