--- a/src/app/Feature/Routings/gallery/gallery.component.html
+++ b/src/app/Feature/Routings/gallery/gallery.component.html
@@ -1,12 +1,34 @@
 <mat-toolbar id="navBar-Main">
-  <nav id="navBar-Left">Gallery</nav>
+  <nav id="navBar-Left">
+    <nav mat-tab-nav-bar>
+      <a
+        mat-tab-link
+        *ngFor="let link of links"
+        [routerLink]="[link.path]"
+        routerLinkActive
+        #rla="routerLinkActive"
+        [active]="rla.isActive"
+        >{{ link.tabName }}
+      </a>
+    </nav>
+  </nav>
   <nav id="navBar-Right">
-    <a routerLink="gallery1" routerLinkActive="active" title="gallery1"
-      >gallery1</a
+    <i
+      (click)="iconEvent()"
+      [ngClass]="imageStatus ? 'activeItem' : ''"
+      class="galleryIcon"
+      title="galleryIcon"
     >
-    <a routerLink="gallery2" routerLinkActive="active" title="gallery2"
-      >gallery2</a
+      <fa-icon [icon]="faImage" id="imageIcon"></fa-icon>
+    </i>
+    <i
+      (click)="iconEvent()"
+      [ngClass]="videoStatus ? 'activeItem' : ''"
+      class="galleryIcon"
+      title="galleryIcon"
     >
+      <fa-icon [icon]="faVideo" id="videoIcon"></fa-icon>
+    </i>
   </nav>
 </mat-toolbar>
 <div>
