--- a/src/app/Feature/Routings/home/home.component.html
+++ b/src/app/Feature/Routings/home/home.component.html
@@ -3,20 +3,22 @@
   <h1>The Pink Panther</h1>
   <img src="assets/PP_MainImage.png" id="imgLand" />
   <img src="assets/PP_MainImage_Small.png" id="imgPort" />
-  <a href="https://www.facebook.com/officialpinkpanther/" target="_blank"
-    ><fa-icon [icon]="faFacebookF" class="brandIcon"></fa-icon
-  ></a>
-  <a href="https://twitter.com/thepinkpanther?lang=en" target="_blank"
-    ><fa-icon [icon]="faTwitter" class="brandIcon"></fa-icon
-  ></a>
-  <a
-    href="https://www.youtube.com/channel/UCFeUyPY6W8qX8w2o6oSiRmw"
-    target="_blank"
-    ><fa-icon [icon]="faYoutube" class="brandIcon"></fa-icon
-  ></a>
-  <a href="https://en.wikipedia.org/wiki/The_Pink_Panther" target="_blank"
-    ><fa-icon [icon]="faWikipediaW" class="brandIcon"></fa-icon
-  ></a>
+  <section class="brandContainer">
+    <a href="https://www.facebook.com/officialpinkpanther/" target="_blank"
+      ><fa-icon [icon]="faFacebookF" class="brandIcon"></fa-icon
+    ></a>
+    <a href="https://twitter.com/thepinkpanther?lang=en" target="_blank"
+      ><fa-icon [icon]="faTwitter" class="brandIcon"></fa-icon
+    ></a>
+    <a
+      href="https://www.youtube.com/channel/UCFeUyPY6W8qX8w2o6oSiRmw"
+      target="_blank"
+      ><fa-icon [icon]="faYoutube" class="brandIcon"></fa-icon
+    ></a>
+    <a href="https://en.wikipedia.org/wiki/The_Pink_Panther" target="_blank"
+      ><fa-icon [icon]="faWikipediaW" class="brandIcon"></fa-icon
+    ></a>
+  </section>
   <br />
   <span
     (click)="playSoundTrack()"
