--- a/src/app/Feature/_nav-bar/nav-bar.component.css
+++ b/src/app/Feature/_nav-bar/nav-bar.component.css
@@ -13,7 +13,7 @@ a {
   font-family: "cooper black";
   color: white;
   text-decoration: none;
-  font-size: 2em;
+  font-size: clamp(1.5rem, 8vw, 2.5rem);
 }
 
 #navBar-Right a {
