--- a/src/app/Feature/Routings/gallery/gallery2/gallery2.component.html
+++ b/src/app/Feature/Routings/gallery/gallery2/gallery2.component.html
@@ -1,3 +1,44 @@
 <main class="routerArea">
   <h2>{{ title }}</h2>
+  <div
+    id="carouselExampleIndicators"
+    class="carousel slide"
+    data-bs-ride="carousel"
+  >
+    <!-- The setting of first and last is just example -->
+    <div class="carousel-inner">
+      <div
+        class="carousel-item"
+        [class.active]="isFirst"
+        *ngFor="let data of dataSet; first as isFirst; last as isLast"
+      >
+        <a href="https://www.google.com" target="_blank">
+          <img [src]="data.url" class="d-block w-100" [alt]="data.title" />
+          <div class="testClass">
+            <div class="carousel-caption">
+              <h3 style="font-size: 5em">Click For Info</h3>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+    <button
+      class="carousel-control-prev"
+      type="button"
+      data-bs-target="#carouselExampleIndicators"
+      data-bs-slide="prev"
+    >
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button
+      class="carousel-control-next"
+      type="button"
+      data-bs-target="#carouselExampleIndicators"
+      data-bs-slide="next"
+    >
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
 </main>
