ask advice off hugh

--- a/src/app/Feature/Routings/gallery/gallery1/gallery1.component.html
+++ b/src/app/Feature/Routings/gallery/gallery1/gallery1.component.html
@@ -1,7 +1,7 @@
 <main class="routerArea">
   <h2>{{ title }}</h2>
   <carousel
-    [images]="dataSet2"
+    [images]="dataSet"
     [height]="valueH"
     [width]="wd"
     [cellsToShow]="ts"
